HelloUltraviolet/Fixtures/RejectedSource/Polymorphism/RefinementPredicateNonBool/Source/Main.uv
//! Rejected refinement specimen for a non-boolean refinement predicate.

public type NonBoolRefinement = i32 |: { self + 1 }
